--- a/index.html
+++ b/index.html
@@ -269,6 +269,7 @@
             <p class="mt-2 text-sm text-gray-400">Clean grid, high contrast, airy spacing. Cocok untuk brand yang ingin tampil rapi & presisi.</p>
             <div class="mt-4 flex gap-3">
               <a id="collabGoWhite"
+              <a href="index-graffiello.html"
                  class="px-4 py-2 rounded-lg bg-white/10 hover:bg-white/20 text-sm cursor-pointer">Explore 갈</a>
             </div>
           </div>
@@ -438,6 +439,7 @@
   </script>
 </body>
 </html>
+
 
 
 
