--- a/index-graffiello.html
+++ b/index-graffiello.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Graffiello_v</title>
-  <link rel="icon" href="./images/graffiellogo.png" type="image/png">
+  <link rel="icon" href="./images/galsp.png" type="image/png">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-white text-gray-800 font-sans">
