--- a/index-graffiello.html
+++ b/index-graffiello.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Graffiello_v</title>
-  <link rel="icon" href="./images/galsp.png" type="image/png">
+  <link rel="icon" href="./images/galsp.png" type="image/png"sizes 35x35">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-white text-gray-800 font-sans">
@@ -13,7 +13,7 @@
   <nav class="sticky top-0 z-50 bg-white/70 backdrop-blur-xl border-b border-gray-200">
     <div class="max-w-7xl mx-auto px-4 h-14 flex items-center justify-between">
       <a href="#home" class="flex items-center">
-        <img src="./images/graffiellogo.png" class="h-9 w-auto" alt="Graffiello Logo" sizes 35x35">
+        <img src="./images/graffiellogo.png" class="h-9 w-auto" alt="Graffiello Logo"sizes 35x35">
       </a>
       <ul class="hidden md:flex items-center gap-8 text-sm font-medium">
         <li><a href="#home" class="hover:text-black">Home</a></li>
