--- a/index-graffiello.html
+++ b/index-graffiello.html
@@ -73,6 +73,51 @@
       </div>
     </div>
   </section>
+  <!-- SHOWCASE (inspirasi dari gambar) -->
+<section id="showcase" class="py-24 bg-gradient-to-br from-white to-gray-100 rounded-3xl shadow-xl mx-4 my-12">
+  <div class="max-w-5xl mx-auto px-6 text-center">
+    <!-- Logo dan navbar mini (opsional, bisa dihapus jika tidak perlu) -->
+    <!-- <div class="flex items-center justify-between mb-8">
+      <div class="flex items-center gap-2">
+        <img src="./images/galsp.png" alt="Logo" class="h-7 w-7 rounded-full">
+        <span class="font-semibold text-gray-700">Pallet Ross</span>
+      </div>
+      <div class="hidden md:flex gap-8 text-sm text-gray-500 font-medium">
+        <a href="#" class="hover:text-black">Get Started</a>
+        <a href="#" class="hover:text-black">Create strategy</a>
+        <a href="#" class="hover:text-black">Pricing</a>
+        <a href="#" class="hover:text-black">Contact</a>
+        <a href="#" class="hover:text-black">Solution</a>
+        <a href="#" class="hover:text-black">E-Commerce</a>
+      </div>
+    </div> -->
+
+    <h2 class="text-4xl sm:text-5xl font-bold text-gray-900 mb-4 leading-tight">
+      A place to display your <br class="hidden sm:block"> masterpiece.
+    </h2>
+    <div class="flex justify-center items-center gap-2 mb-8">
+      <span class="bg-blue-100 text-blue-700 px-3 py-1 rounded-full text-xs font-semibold shadow-sm">@copjin</span>
+      <div class="flex gap-2">
+        <!-- Showcase cards -->
+        <div class="flex gap-3 mt-4 sm:mt-0">
+          <img src="./images/project1.jpg" alt="Artwork 1" class="rounded-xl shadow-lg w-28 h-32 object-cover rotate-[-10deg] border-4 border-white" loading="lazy">
+          <img src="./images/project2.jpg" alt="Artwork 2" class="rounded-xl shadow-lg w-28 h-32 object-cover rotate-[-5deg] border-4 border-white" loading="lazy">
+          <img src="./images/about_graffiello.jpg" alt="Artwork 3" class="rounded-xl shadow-lg w-28 h-32 object-cover rotate-[0deg] border-4 border-white" loading="lazy">
+          <img src="./images/project3.jpg" alt="Artwork 4" class="rounded-xl shadow-lg w-28 h-32 object-cover rotate-[7deg] border-4 border-white" loading="lazy">
+          <img src="./images/blackmatter.jpg" alt="Artwork 5" class="rounded-xl shadow-lg w-28 h-32 object-cover rotate-[12deg] border-4 border-white" loading="lazy">
+        </div>
+      </div>
+      <span class="bg-green-100 text-green-700 px-3 py-1 rounded-full text-xs font-semibold shadow-sm">@andrew</span>
+    </div>
+    <p class="text-gray-500 mb-8 max-w-xl mx-auto">
+      Artists can display their masterpieces, and buyers can discover and purchase works that resonate with them.
+    </p>
+    <div class="flex justify-center gap-4">
+      <a href="#" class="px-6 py-2 bg-black text-white rounded-full font-semibold shadow hover:bg-gray-900 transition">Join for $9.99/mo</a>
+      <a href="#" class="px-6 py-2 bg-gray-200 text-gray-800 rounded-full font-semibold shadow hover:bg-gray-300 transition">Read more</a>
+    </div>
+  </div>
+</section>
 
   <!-- COLLAB -->
   <section id="collab" class="py-20 bg-gray-100">
