--- a/index-graffiello.html
+++ b/index-graffiello.html
@@ -13,7 +13,7 @@
   <nav class="sticky top-0 z-50 bg-white/70 backdrop-blur-xl border-b border-gray-200">
     <div class="max-w-7xl mx-auto px-4 h-14 flex items-center justify-between">
       <a href="#home" class="flex items-center">
-        <img src="./images/graffiellogo.png" class="h-9 w-auto" alt="Graffiello Logo"sizes 35x35">
+        <img src="./images/bkgraf.jpeg" class="h-9 w-auto" alt="Graffiello Logo"sizes 35x35">
       </a>
       <ul class="hidden md:flex items-center gap-8 text-sm font-medium">
         <li><a href="#home" class="hover:text-black">Home</a></li>
@@ -50,6 +50,12 @@
   </section>
 
   <!-- PROJECTS -->
+   <!-- NAVBAR -->
+  <nav class="sticky top-0 z-50 bg-white/70 backdrop-blur-xl border-b border-gray-200">
+    <div class="max-w-7xl mx-auto px-4 h-14 flex items-center justify-between">
+      <a href="#home" class="flex items-center">
+        <img src="./images/bkgraf.jpeg" class="h-9 w-auto" alt="Graffiello Logo"sizes 35x35">
+      </a>
   <section id="projects" class="py-20">
     <h2 class="text-center text-3xl font-bold mb-10">Featured Works</h2>
     <div class="max-w-6xl mx-auto grid sm:grid-cols-2 md:grid-cols-3 gap-8 px-6">
