--- a/index-graffiello.html
+++ b/index-graffiello.html
@@ -127,6 +127,25 @@
 </section>
 
   <!-- COLLAB -->
+      <div class="grid sm:grid-cols-2 gap-8">
+  <!-- Card Graffiello_V dengan blur -->
+  <div class="border border-gray-200 rounded-3xl p-6 bg-white/60 shadow-md backdrop-blur-xl">
+    <img src="./images/graffiello.jpg" class="w-full h-40 object-cover rounded-xl mb-4" alt="Graffiello_V" loading="lazy">
+    <h3 class="text-lg font-semibold text-gray-900">Graffiello_V</h3>
+    <p class="text-gray-600 text-sm mt-2">White theme — clean, precise, bright.</p>
+    <a id="collabGoWhite" class="mt-4 inline-block px-5 py-2 bg-black text-white rounded-lg cursor-pointer">Explore 갈</a>
+  </div>
+
+  <!-- Card Blackmatter (tanpa blur, tetap seperti sebelumnya) -->
+  <div class="border border-gray-200 rounded-3xl p-6 bg-white shadow-md">
+    <img src="./images/blackmatter.jpg" class="w-full h-40 object-cover rounded-xl mb-4" alt="Blackmatter" loading="lazy">
+    <h3 class="text-lg font-semibold text-gray-900">Blackmatter (BTR)</h3>
+    <p class="text-gray-600 text-sm mt-2">Dark theme — void, mystery, contrast.</p>
+    <a href="index.html"
+    <a id="collabGoDark" class="mt-4 inline-block px-5 py-2 bg-black text-white rounded-lg cursor-pointer">Explore BTR </a>
+    </a>
+  </div>
+</div>
   <section id="collab" class="py-20 bg-gray-100">
     <div class="max-w-5xl mx-auto px-6 text-center">
       <h2 class="text-3xl font-bold mb-8">Graffiello_V × Blackmatter</h2>
