--- a/index-graffiello.html
+++ b/index-graffiello.html
@@ -13,7 +13,7 @@
   <nav class="sticky top-0 z-50 bg-white/70 backdrop-blur-xl border-b border-gray-200">
     <div class="max-w-7xl mx-auto px-4 h-14 flex items-center justify-between">
       <a href="#home" class="flex items-center">
-        <img src="./images/bkgraf.jpeg" class="h-9 w-auto" alt="Graffiello Logo"sizes 35x35">
+        <img src="./images/graffiellogo.png" class="h-9 w-auto" alt="Graffiello Logo"sizes 35x35">
       </a>
       <ul class="hidden md:flex items-center gap-8 text-sm font-medium">
         <li><a href="#home" class="hover:text-black">Home</a></li>
@@ -37,7 +37,7 @@
   <!-- ABOUT -->
   <section id="about" class="py-20 bg-gray-50">
     <div class="max-w-6xl mx-auto px-6 grid md:grid-cols-2 gap-10 items-center">
-      <img src="./images/about_graffiello.jpg" alt="About" class="rounded-3xl shadow-lg object-cover w-full h-[420px]">
+      <img src="./images/bkgraf.jpeg" alt="About" class="rounded-3xl shadow-lg object-cover w-full h-[420px]">
       <div>
         <h2 class="text-3xl font-bold mb-4">About Me</h2>
         <p class="text-gray-600 mb-6 leading-relaxed">
