--- a/index-graffiello.html
+++ b/index-graffiello.html
@@ -29,7 +29,7 @@
   <section id="home" class="min-h-[100vh] flex items-center justify-center text-center px-6">
     <div>
         <section id="home" class="relative min-h-[100svh] flex items-center px-4 sm:px-8 md:px-20 pt-24">
-    <img src="./images/bkgraf.jpeg" alt="Blackmatter Hero"
+    <img src="./images/me.jpeg" alt="Blackmatter Hero"
          class="absolute inset-0 w-full h-full object-cover opacity-30" />
       <h1 class="text-5xl sm:text-7xl font-extrabold text-gray-900 mb-4">Precision in Motion</h1>
       <p class="text-gray-600 max-w-xl mx-auto mb-8">Graffiello_V — clean composition, modern form, and precise design harmony.</p>
@@ -124,34 +124,15 @@
 </section>
 
   <!-- COLLAB -->
-      <div class="grid sm:grid-cols-2 gap-8">
-  <!-- Card Graffiello_V dengan blur -->
-  <div class="border border-gray-200 rounded-3xl p-6 bg-white/60 shadow-md backdrop-blur-xl">
-    <img src="./images/graffiello.jpg" class="w-full h-40 object-cover rounded-xl mb-4" alt="Graffiello_V" loading="lazy">
-    <h3 class="text-lg font-semibold text-gray-900">Graffiello_V</h3>
-    <p class="text-gray-600 text-sm mt-2">White theme — clean, precise, bright.</p>
-    <a id="collabGoWhite" class="mt-4 inline-block px-5 py-2 bg-black text-white rounded-lg cursor-pointer">Explore 갈</a>
-  </div>
-
-  <!-- Card Blackmatter (tanpa blur, tetap seperti sebelumnya) -->
-  <div class="border border-gray-200 rounded-3xl p-6 bg-white shadow-md">
-    <img src="./images/blackmatter.jpg" class="w-full h-40 object-cover rounded-xl mb-4" alt="Blackmatter" loading="lazy">
-    <h3 class="text-lg font-semibold text-gray-900">Blackmatter (BTR)</h3>
-    <p class="text-gray-600 text-sm mt-2">Dark theme — void, mystery, contrast.</p>
-    <a href="index.html"
-    <a id="collabGoDark" class="mt-4 inline-block px-5 py-2 bg-black text-white rounded-lg cursor-pointer">Explore BTR </a>
-    </a>
-  </div>
-</div>
   <section id="collab" class="py-20 bg-gray-100">
     <div class="max-w-5xl mx-auto px-6 text-center">
-      <h2 class="text-3xl font-bold mb-8">Graffiello_V × Blackmatter</h2>
+      <h2 class="text-3xl font-bold mb-8">갈 × BTR</h2>
       <p class="text-gray-600 mb-10">Dua persona visual — keseimbangan antara kehampaan dan presisi.</p>
 
       <div class="grid sm:grid-cols-2 gap-8">
         <div class="border border-gray-200 rounded-3xl p-6 bg-white shadow-md">
           <img src="./images/graffiello.jpg" class="w-full h-40 object-cover rounded-xl mb-4" alt="Graffiello_V">
-          <h3 class="text-lg font-semibold text-gray-900">Graffiello_V</h3>
+          <h3 class="text-lg font-semibold text-gray-900">Graffiello_v</h3>
           <p class="text-gray-600 text-sm mt-2">White theme — clean, precise, bright.</p>
           <a id="collabGoWhite" class="mt-4 inline-block px-5 py-2 bg-black text-white rounded-lg cursor-pointer">Explore 갈</a>
         </div>
