--- a/index-graffiello.html
+++ b/index-graffiello.html
@@ -30,7 +30,7 @@
     <div>
         <section id="home" class="relative min-h-[100svh] flex items-center px-4 sm:px-8 md:px-20 pt-24">
     <img src="./images/me.jpeg" alt="Blackmatter Hero"
-         class="absolute inset-0 w-full h-full object-cover opacity-30" />
+         class="absolute inset-0 w-full h-full object-cover"/>
       <h1 class="text-5xl sm:text-7xl font-extrabold text-gray-900 mb-4">Precision in Motion</h1>
       <p class="text-gray-600 max-w-xl mx-auto mb-8">Graffiello_V — clean composition, modern form, and precise design harmony.</p>
       <a href="#collab" class="px-6 py-3 bg-black text-white font-semibold rounded-full hover:opacity-90 transition">See Collaboration</a>
