--- a/index-graffiello.html
+++ b/index-graffiello.html
@@ -18,7 +18,7 @@
       <ul class="hidden md:flex items-center gap-8 text-sm font-medium">
         <li><a href="#home" class="hover:text-black">Home</a></li>
         <li><a href="#about" class="hover:text-black">About</a></li>
-        <li><a href="#projects" class="hover:text-black">Projects</a></li>
+        <li><a href="#dream-cove" class="hover:text-black">Dream Cove</a></li>
         <li><a href="#collab" class="hover:text-black">Collab</a></li>
         <li><a href="#contact" class="hover:text-black">Contact</a></li>
       </ul>
