--- a/index-graffiello.html
+++ b/index-graffiello.html
@@ -103,11 +103,11 @@
       <div class="flex gap-2">
         <!-- Showcase cards -->
         <div class="flex gap-3 mt-4 sm:mt-0">
-          <img src="./images/project1.jpg" alt="Artwork 1" class="rounded-xl shadow-lg w-28 h-32 object-cover rotate-[-10deg] border-4 border-white" loading="lazy">
-          <img src="./images/project2.jpg" alt="Artwork 2" class="rounded-xl shadow-lg w-28 h-32 object-cover rotate-[-5deg] border-4 border-white" loading="lazy">
-          <img src="./images/about_graffiello.jpg" alt="Artwork 3" class="rounded-xl shadow-lg w-28 h-32 object-cover rotate-[0deg] border-4 border-white" loading="lazy">
-          <img src="./images/project3.jpg" alt="Artwork 4" class="rounded-xl shadow-lg w-28 h-32 object-cover rotate-[7deg] border-4 border-white" loading="lazy">
-          <img src="./images/blackmatter.jpg" alt="Artwork 5" class="rounded-xl shadow-lg w-28 h-32 object-cover rotate-[12deg] border-4 border-white" loading="lazy">
+          <img src="./images/1.jpg" alt="Artwork 1" class="rounded-xl shadow-lg w-28 h-32 object-cover rotate-[-10deg] border-4 border-white" loading="lazy">
+          <img src="./images/2.jpg" alt="Artwork 2" class="rounded-xl shadow-lg w-28 h-32 object-cover rotate-[-5deg] border-4 border-white" loading="lazy">
+          <img src="./images/3.jpg" alt="Artwork 3" class="rounded-xl shadow-lg w-28 h-32 object-cover rotate-[0deg] border-4 border-white" loading="lazy">
+          <img src="./images/4.jpg" alt="Artwork 4" class="rounded-xl shadow-lg w-28 h-32 object-cover rotate-[7deg] border-4 border-white" loading="lazy">
+          <img src="./images/5.jpg" alt="Artwork 5" class="rounded-xl shadow-lg w-28 h-32 object-cover rotate-[12deg] border-4 border-white" loading="lazy">
         </div>
       </div>
       <span class="bg-green-100 text-green-700 px-3 py-1 rounded-full text-xs font-semibold shadow-sm">@andrew</span>
