--- a/index-graffiello.html
+++ b/index-graffiello.html
@@ -134,11 +134,11 @@
         </div>
 
         <div class="border border-gray-200 rounded-3xl p-6 bg-white shadow-md">
-          <img src="./images/blackmatter.jpg" class="w-full h-40 object-cover rounded-xl mb-4" alt="Blackmatter">
+          <img src="./images/background.jpg" class="w-full h-40 object-cover rounded-xl mb-4" alt="Blackmatter">
           <h3 class="text-lg font-semibold text-gray-900">Blackmatter (BTR)</h3>
           <p class="text-gray-600 text-sm mt-2">Dark theme — void, mystery, contrast.</p>
            <a href="index.html" 
-          <a id="collabGoDark" class="mt-4 inline-block px-5 py-2 bg-black text-white rounded-lg cursor-pointer">Explore BTR </a>
+          <a id="collabGoDark" class="mt-4 inline-block px-5 py-2 bg-blur text-white rounded-lg cursor-pointer">Explore BTR </a>
           </a>
         </div>
       </div>
