--- a/index-graffiello.html
+++ b/index-graffiello.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Graffiello_v</title>
-  <link rel="icon" href="./images/galsp.png" type="image/png"sizes 150x150">
+  <link rel="icon" href="./images/galsp.png" type="image/png"sizes 100x100">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-white text-gray-800 font-sans">
@@ -13,7 +13,7 @@
   <nav class="sticky top-0 z-50 bg-white/70 backdrop-blur-xl border-b border-gray-200">
     <div class="max-w-7xl mx-auto px-4 h-14 flex items-center justify-between">
       <a href="#home" class="flex items-center">
-        <img src="./images/graffiellogo.png" class="h-15 w-auto" alt="Graffiello Logo"sizes 35x35">
+        <img src="./images/graffiellogo.png" class="h-10 w-auto" alt="Graffiello Logo"sizes 35x35">
       </a>
       <ul class="hidden md:flex items-center gap-8 text-sm font-medium">
         <li><a href="#home" class="hover:text-black">Home</a></li>
@@ -127,12 +127,12 @@
 
       <div class="grid sm:grid-cols-2 gap-8">
         <div class="border border-gray-200 rounded-3xl p-6 bg-white shadow-md">
-          <img src="./images/graffiello.jpg" class="w-full h-40 object-cover rounded-xl mb-4" alt="Graffiello_V">
+          <img src="./images/graffiello.jpg" class="w-full h-40 object-cover rounded-xl mb-4" alt="Graffiello_v">
+          <div class="absolute inset-0 bg-gradient-to-t from-black/40 to-transparent"></div>
           <h3 class="text-lg font-semibold text-gray-900">Graffiello_v(갈)</h3>
           <p class="text-gray-600 text-sm mt-2">White theme — clean, precise, bright.</p>
-          <a id="collabGoWhite" class="mt-4 inline-block px-5 py-2 bg-black text-white rounded-lg cursor-pointer">Explore 갈</a>
+          <a id="collabGoWhite" class="px-4 py-2 rounded-lg bg-white/10 hover:bg-white/20 text-sm cursor-pointer">Explore 갈</a>
         </div>
-
         <div class="border border-gray-200 rounded-3xl p-6 bg-white shadow-md">
           <img src="./images/background.jpg" class="w-full h-40 object-cover rounded-xl mb-4" alt="Blackmatter">
           <h3 class="text-lg font-semibold text-gray-900">Blackmatter (BTR)</h3>
