--- a/index-graffiello.html
+++ b/index-graffiello.html
@@ -131,14 +131,14 @@
           <div class="absolute inset-0 bg-gradient-to-t from-black/40 to-transparent"></div>
           <h3 class="text-lg font-semibold text-gray-900">Graffiello_v(갈)</h3>
           <p class="text-gray-600 text-sm mt-2">White theme — clean, precise, bright.</p>
-          <a id="collabGoWhite" class="px-4 py-2 rounded-lg bg-white/10 hover:bg-white/20 text-sm cursor-pointer">Explore 갈</a>
+          <a id="collabGoWhite" class="mt-4 inline-block px-5 py-2 bg-black/20 text-white rounded-lg cursor-pointer">Explore 갈</a>
         </div>
         <div class="border border-gray-200 rounded-3xl p-6 bg-white shadow-md">
           <img src="./images/background.jpg" class="w-full h-40 object-cover rounded-xl mb-4" alt="Blackmatter">
           <h3 class="text-lg font-semibold text-gray-900">Blackmatter (BTR)</h3>
           <p class="text-gray-600 text-sm mt-2">Dark theme — void, mystery, contrast.</p>
            <a href="index.html" 
-          <a id="collabGoDark" class="mt-4 inline-block px-5 py-2 bg-blur text-white rounded-lg cursor-pointer">Explore BTR </a>
+          <a id="collabGoDark" class="mt-4 inline-block px-5 py-2 bg-black/20 text-white rounded-lg cursor-pointer">Explore BTR </a>
           </a>
         </div>
       </div>
