--- a/index-graffiello.html
+++ b/index-graffiello.html
@@ -134,7 +134,7 @@
           <a id="collabGoWhite" class="mt-4 inline-block px-5 py-2 bg-black/20 text-white rounded-lg cursor-pointer">Explore 갈</a>
         </div>
         <div class="border border-gray-200 rounded-3xl p-6 bg-white shadow-md">
-          <img src="./images/background.jpg" class="w-full h-40 object-cover rounded-xl mb-4" alt="Blackmatter">
+          <img src="./images/Background.jpg" class="w-full h-40 object-cover rounded-xl mb-4" alt="Blackmatter">
           <h3 class="text-lg font-semibold text-gray-900">Blackmatter (BTR)</h3>
           <p class="text-gray-600 text-sm mt-2">Dark theme — void, mystery, contrast.</p>
            <a href="index.html" 
