--- a/index-graffiello.html
+++ b/index-graffiello.html
@@ -13,7 +13,7 @@
   <nav class="sticky top-0 z-50 bg-white/70 backdrop-blur-xl border-b border-gray-200">
     <div class="max-w-7xl mx-auto px-4 h-14 flex items-center justify-between">
       <a href="#home" class="flex items-center">
-        <img src="./images/graffiellogo.png" class="h-10 w-auto" alt="Graffiello Logo"sizes 35x35">
+        <img src="./images/graffiellogo.png" class="h-10 w-10" alt="Graffiello Logo"sizes 35x35">
       </a>
       <ul class="hidden md:flex items-center gap-8 text-sm font-medium">
         <li><a href="#home" class="hover:text-black">Home</a></li>
