--- a/index-graffiello.html
+++ b/index-graffiello.html
@@ -131,7 +131,7 @@
           <div class="absolute inset-0 bg-gradient-to-t from-black/40 to-transparent"></div>
           <h3 class="text-lg font-semibold text-gray-900">Graffiello_v(갈)</h3>
           <p class="text-gray-600 text-sm mt-2">White theme — clean, precise, bright.</p>
-          <a id="collabGoWhite" class="mt-4 inline-block px-5 py-2 bg-black/20 text-white rounded-lg cursor-pointer">Explore 갈</a>
+          <a id="collabGoGraffiello_v" class="mt-4 inline-block px-5 py-2 bg-black/20 text-white rounded-lg cursor-pointer">Explore 갈</a>
         </div>
         <div class="border border-gray-200 rounded-3xl p-6 bg-white shadow-md">
           <img src="./images/Background.jpg" class="w-full h-40 object-cover rounded-xl mb-4" alt="Blackmatter">
