--- a/index-graffiello.html
+++ b/index-graffiello.html
@@ -3,177 +3,144 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Graffiello_v</title>
-  <link rel="icon" href="./images/galsp.png" type="image/png"sizes 100x100">
+  <title>Graffiello_V — Real Estate</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-white text-gray-800 font-sans">
 
-  <!-- NAVBAR -->
-  <nav class="sticky top-0 z-50 bg-white/70 backdrop-blur-xl border-b border-gray-200">
-    <div class="max-w-7xl mx-auto px-4 h-14 flex items-center justify-between">
-      <a href="#home" class="flex items-center">
-        <img src="./images/graffiellogo.png" class="h-10 w-10" alt="Graffiello Logo"sizes 35x35">
-      </a>
-      <ul class="hidden md:flex items-center gap-8 text-sm font-medium">
-        <li><a href="#home" class="hover:text-black">Home</a></li>
-        <li><a href="#about" class="hover:text-black">About</a></li>
-        <li><a href="#dream-cove" class="hover:text-black">Dream Cove</a></li>
-        <li><a href="#collab" class="hover:text-black">Collab</a></li>
-        <li><a href="#contact" class="hover:text-black">Contact</a></li>
-      </ul>
+<body class="bg-white text-gray-900">
+
+  <!-- Hero Section -->
+  <section class="relative h-screen flex items-center justify-center">
+    <img src="./images/building.jpg" alt="Luxury Estate" class="absolute inset-0 w-full h-full object-cover opacity-90">
+    <div class="absolute inset-0 bg-gradient-to-b from-white/0 to-white/80"></div>
+
+    <div class="relative text-center max-w-2xl px-6">
+      <h1 class="text-4xl md:text-6xl font-bold mb-4">Own Your Luxury Dream Estate</h1>
+      <p class="text-gray-700 mb-6">Discover exclusive homes and architectural marvels designed for modern living.</p>
+      <a href="#featured" class="bg-gray-900 text-white px-6 py-3 rounded-full hover:bg-gray-800 transition">Learn More</a>
     </div>
-  </nav>
+  </section>
 
-  <!-- HERO -->
-  <section id="home" class="min-h-[100vh] flex items-center justify-center text-center px-6">
+  <!-- Stats Section -->
+  <section class="grid grid-cols-1 md:grid-cols-3 gap-6 max-w-5xl mx-auto px-6 py-20">
+    <div class="bg-blue-50 rounded-xl p-6 text-center">
+      <h3 class="text-3xl font-bold text-blue-700">1200+</h3>
+      <p class="text-gray-600">Companies affiliated</p>
+    </div>
+    <div class="bg-blue-50 rounded-xl p-6 text-center">
+      <h3 class="text-3xl font-bold text-blue-700">8M+</h3>
+      <p class="text-gray-600">Happy Customers</p>
+    </div>
+    <div class="bg-blue-50 rounded-xl p-6 text-center">
+      <h3 class="text-3xl font-bold text-blue-700">9+</h3>
+      <p class="text-gray-600">Years of Service</p>
+    </div>
+  </section>
+
+  <!-- Partnerships -->
+  <section class="bg-gray-50 py-12">
+    <div class="max-w-6xl mx-auto text-center">
+      <h2 class="text-2xl font-semibold mb-4">Our Partnerships</h2>
+      <p class="text-gray-600 mb-10">Trusted collaborations with global leaders in architecture and real estate.</p>
+      <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-6 gap-6">
+        <div class="bg-white border rounded-xl p-6">Logo 1</div>
+        <div class="bg-white border rounded-xl p-6">Logo 2</div>
+        <div class="bg-white border rounded-xl p-6">Logo 3</div>
+        <div class="bg-white border rounded-xl p-6">Logo 4</div>
+        <div class="bg-white border rounded-xl p-6">Logo 5</div>
+        <div class="bg-white border rounded-xl p-6">Logo 6</div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Featured Properties -->
+  <section id="featured" class="max-w-6xl mx-auto px-6 py-20">
+    <h2 class="text-3xl font-bold text-center mb-4">Featured Properties</h2>
+    <p class="text-gray-600 text-center mb-10">Explore our premium listings from urban penthouses to coastal villas.</p>
+
+    <div class="grid md:grid-cols-4 gap-6">
+      <div class="relative overflow-hidden rounded-2xl">
+        <img src="./images/p1.jpg" class="w-full h-64 object-cover">
+        <div class="absolute inset-0 bg-black/40 text-white flex flex-col justify-end p-4">
+          <h3 class="font-semibold text-lg">Luxury Villas Retreat</h3>
+          <p class="text-sm">$1,500,000</p>
+        </div>
+      </div>
+
+      <div class="relative overflow-hidden rounded-2xl">
+        <img src="./images/p2.jpg" class="w-full h-64 object-cover">
+        <div class="absolute inset-0 bg-black/40 text-white flex flex-col justify-end p-4">
+          <h3 class="font-semibold text-lg">Cityscape Penthouse</h3>
+          <p class="text-sm">$2,000,000</p>
+        </div>
+      </div>
+
+      <div class="relative overflow-hidden rounded-2xl">
+        <img src="./images/p3.jpg" class="w-full h-64 object-cover">
+        <div class="absolute inset-0 bg-black/40 text-white flex flex-col justify-end p-4">
+          <h3 class="font-semibold text-lg">Seaside Dream Home</h3>
+          <p class="text-sm">$3,200,000</p>
+        </div>
+      </div>
+
+      <div class="flex flex-col justify-center bg-gray-900 text-white rounded-2xl p-6">
+        <h3 class="text-xl font-semibold mb-3">Find Property For Your Family</h3>
+        <p class="text-gray-300 mb-4">Browse our complete listings for your dream space.</p>
+        <a href="#" class="bg-white text-gray-900 px-5 py-2 rounded-full hover:bg-gray-200">Explore all →</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- About -->
+  <section class="grid md:grid-cols-2 gap-6 max-w-6xl mx-auto px-6 py-20 items-center">
+    <img src="./images/about.jpg" class="rounded-2xl object-cover w-full h-96">
     <div>
-        <section id="home" class="relative min-h-[100svh] flex items-center px-4 sm:px-8 md:px-20 pt-24">
-    <img src="./images/me.jpeg" alt="Blackmatter Hero" class="absolute inset-0 w-full h-full object-cover"/>
-      <h1 class="text-5xl sm:text-7xl font-extrabold text-gray-900 mb-4">Precision in Motion</h1>
-      <p class="text-gray-600 max-w-xl mx-auto mb-8">Graffiello_V — clean composition, modern form, and precise design harmony.</p>
-      <a href="#collab" class="px-6 py-3 bg-black text-white font-semibold rounded-full hover:opacity-90 transition">See Collaboration</a>
+      <h2 class="text-3xl font-bold mb-4">Who we are and what you get from our spaces</h2>
+      <p class="text-gray-600 mb-6">We offer architectural excellence and modern elegance with every property we develop — ensuring comfort, luxury, and sustainability.</p>
+      <div class="flex gap-6 mb-6">
+        <div>
+          <p class="text-2xl font-bold">5k+</p>
+          <p class="text-gray-500 text-sm">Sold</p>
+        </div>
+        <div>
+          <p class="text-2xl font-bold">9.5/10</p>
+          <p class="text-gray-500 text-sm">Satisfaction</p>
+        </div>
+        <div>
+          <p class="text-2xl font-bold">15</p>
+          <p class="text-gray-500 text-sm">Years</p>
+        </div>
+      </div>
+      <a href="#" class="bg-gray-900 text-white px-6 py-3 rounded-full hover:bg-gray-800">Read More</a>
     </div>
   </section>
 
-  <!-- ABOUT -->
-  <section id="about" class="py-20 bg-gray-50">
-    <div class="max-w-6xl mx-auto px-6 grid md:grid-cols-2 gap-10 items-center">
-      <img src="./images/bkgraf.jpeg" alt="About" class="rounded-3xl shadow-lg object-cover w-full h-[420px]">
+  <!-- Contact / Footer -->
+  <footer class="bg-gray-100 py-12 text-center">
+    <h3 class="text-2xl font-semibold mb-8">Let’s Stay Connected</h3>
+    <div class="grid md:grid-cols-3 gap-8 max-w-4xl mx-auto text-gray-700 mb-10">
       <div>
-        <h2 class="text-3xl font-bold mb-4">About Me</h2>
-        <p class="text-gray-600 mb-6 leading-relaxed">
-          Saya percaya bahwa setiap bentuk memiliki makna — setiap garis punya arah.
-          <span class="font-semibold text-black">Graffiello_V</span> adalah refleksi dari keindahan dalam kesederhanaan dan keseimbangan visual.
-        </p>
-        <a href="#contact" class="inline-block px-5 py-2 bg-black text-white rounded-lg hover:opacity-90 transition">Contact Me</a>
+        <p class="font-semibold mb-1">Email address</p>
+        <p>info@company.com</p>
+      </div>
+      <div>
+        <p class="font-semibold mb-1">Phone number</p>
+        <p>+1 234 567 890</p>
+      </div>
+      <div>
+        <p class="font-semibold mb-1">Address</p>
+        <p>123 Main Street, City, Country</p>
       </div>
     </div>
-  </section>
 
-  <!-- PROJECTS -->
-  <section id="projects" class="py-20">
-    <h2 class="text-center text-3xl font-bold mb-10">Featured Works</h2>
-    <div class="max-w-6xl mx-auto grid sm:grid-cols-2 md:grid-cols-3 gap-8 px-6">
-      <div class="rounded-xl overflow-hidden shadow-lg">
-        <img src="./images/project1.jpg" class="w-full h-56 object-cover">
-        <div class="p-4">
-          <p class="font-medium text-gray-800">Minimalist Poster</p>
-        </div>
-      </div>
-      <div class="rounded-xl overflow-hidden shadow-lg">
-        <img src="./images/project2.jpg" class="w-full h-56 object-cover">
-        <div class="p-4">
-          <p class="font-medium text-gray-800">Brand Identity</p>
-        </div>
-      </div>
-      <div class="rounded-xl overflow-hidden shadow-lg">
-        <img src="./images/project3.jpg" class="w-full h-56 object-cover">
-        <div class="p-4">
-          <p class="font-medium text-gray-800">Typography Study</p>
-        </div>
-      </div>
-    </div>
-  </section>
-  
-  <!-- SHOWCASE (inspirasi dari gambar) -->
-<section id="showcase" class="py-24 bg-gradient-to-br from-white to-gray-100 rounded-3xl shadow-xl mx-4 my-12">
-  <div class="max-w-5xl mx-auto px-6 text-center">
-    <!-- Logo dan navbar mini (opsional, bisa dihapus jika tidak perlu) -->
-    <!-- <div class="flex items-center justify-between mb-8">
-      <div class="flex items-center gap-2">
-        <img src="./images/galsp.png" alt="Logo" class="h-7 w-7 rounded-full">
-        <span class="font-semibold text-gray-700">Pallet Ross</span>
-      </div>
-      <div class="hidden md:flex gap-8 text-sm text-gray-500 font-medium">
-        <a href="#" class="hover:text-black">Get Started</a>
-        <a href="#" class="hover:text-black">Create strategy</a>
-        <a href="#" class="hover:text-black">Pricing</a>
-        <a href="#" class="hover:text-black">Contact</a>
-        <a href="#" class="hover:text-black">Solution</a>
-        <a href="#" class="hover:text-black">E-Commerce</a>
-      </div>
-    </div> -->
+    <!-- Back to Blackmatter -->
+    <a href="./index.html"
+       class="inline-block bg-gray-900 text-white px-6 py-3 rounded-full hover:bg-gray-800 transition">
+       ← Back to Blackmatter
+    </a>
 
-    <h2 class="text-4xl sm:text-5xl font-bold text-gray-900 mb-4 leading-tight">
-      A place to display your <br class="hidden sm:block"> masterpiece.
-    </h2>
-    <div class="flex justify-center items-center gap-2 mb-8">
-      <div class="flex gap-2">
-        <!-- Showcase cards -->
-        <div class="flex gap-3 mt-4 sm:mt-0">
-          <img src="./images/1.jpg" alt="Artwork 1" class="rounded-xl shadow-lg w-28 h-32 object-cover rotate-[-10deg] border-4 border-white" loading="lazy">
-          <img src="./images/2.jpg" alt="Artwork 2" class="rounded-xl shadow-lg w-28 h-32 object-cover rotate-[-5deg] border-4 border-white" loading="lazy">
-          <img src="./images/3.jpg" alt="Artwork 3" class="rounded-xl shadow-lg w-28 h-32 object-cover rotate-[0deg] border-4 border-white" loading="lazy">
-          <img src="./images/4.jpg" alt="Artwork 4" class="rounded-xl shadow-lg w-28 h-32 object-cover rotate-[7deg] border-4 border-white" loading="lazy">
-          <img src="./images/5.jpg" alt="Artwork 5" class="rounded-xl shadow-lg w-28 h-32 object-cover rotate-[12deg] border-4 border-white" loading="lazy">
-        </div>
-      </div>
-    <p class="text-gray-500 mb-8 max-w-xl mx-auto">
-      Artists can display their masterpieces, and buyers can discover and purchase works that resonate with them.
-    </p>
-    <div class="flex justify-center gap-4">
-      <a href="#" class="px-6 py-2 bg-black text-white rounded-full font-semibold shadow hover:bg-gray-900 transition">Join for $9.99/mo</a>
-      <a href="#" class="px-6 py-2 bg-gray-200 text-gray-800 rounded-full font-semibold shadow hover:bg-gray-300 transition">Read more</a>
-    </div>
-  </div>
-</section>
-
-  <!-- COLLAB -->
-  <section id="collab" class="py-20 bg-gray-100">
-    <div class="max-w-5xl mx-auto px-6 text-center">
-      <h2 class="text-3xl font-bold mb-8">갈 × BTR</h2>
-      <p class="text-gray-600 mb-10">Dua persona visual — keseimbangan antara kehampaan dan presisi.</p>
-
-      <div class="grid sm:grid-cols-2 gap-8">
-        <div class="border border-gray-200 rounded-3xl p-6 bg-white shadow-md">
-          <img src="./images/graffiello.jpg" class="w-full h-40 object-cover rounded-xl mb-4" alt="Graffiello_v">
-          <div class="absolute inset-0 bg-gradient-to-t from-black/40 to-transparent"></div>
-          <h3 class="text-lg font-semibold text-gray-900">Graffiello_v(갈)</h3>
-          <p class="text-gray-600 text-sm mt-2">White theme — clean, precise, bright.</p>
-          <a id="collabGoGraffiello_v" class="mt-4 inline-block px-5 py-2 bg-black/20 text-white rounded-lg cursor-pointer">Explore 갈</a>
-        </div>
-        <div class="border border-gray-200 rounded-3xl p-6 bg-white shadow-md">
-          <img src="./images/Background.jpg" class="w-full h-40 object-cover rounded-xl mb-4" alt="Blackmatter">
-          <h3 class="text-lg font-semibold text-gray-900">Blackmatter (BTR)</h3>
-          <p class="text-gray-600 text-sm mt-2">Dark theme — void, mystery, contrast.</p>
-           <a href="index.html" 
-          <a id="collabGoDark" class="mt-4 inline-block px-5 py-2 bg-black/20 text-white rounded-lg cursor-pointer">Explore BTR </a>
-          </a>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- CONTACT -->
-  <section id="contact" class="py-16 text-center bg-gray-50">
-    <h2 class="text-2xl font-bold mb-2">Contact</h2>
-    <p class="text-gray-500 mb-6">Follow for updates and collaborations:</p>
-
-    <div class="flex justify-center gap-10">
-      <a href="https://www.instagram.com/graffiello_v" target="_blank">
-        <img src="./images/instagram.png" class="h-10 w-10 mx-auto mb-2" alt="Instagram">
-        <span class="block text-gray-800">@graffiello_v</span>
-      </a>
-      <a href="https://www.behance.net/g632" target="_blank">
-        <img src="./images/behance.png" class="h-10 w-10 mx-auto mb-2" alt="Behance">
-        <span class="block text-gray-800">/g632</span>
-      </a>
-    </div>
-  </section>
-
-  <!-- FOOTER -->
-  <footer class="py-4 text-center border-t border-gray-200">
-    <p class="text-gray-500 text-sm">© 2025 Graffiello_V. All rights reserved.</p>
+    <p class="text-gray-500 text-sm mt-6">© 2025 Graffiello_V. All rights reserved.</p>
   </footer>
 
-  <!-- JS: Hubungkan antar situs -->
-  <script>
-    const DARK_URL  = '../index.html';      // kembali ke Blackmatter
-    const WHITE_URL = 'index.html#about';   // tetap di Graffiello_V
-
-    document.getElementById('collabGoDark') ?.addEventListener('click', ()=> window.location.href = DARK_URL);
-    document.getElementById('collabGoWhite')?.addEventListener('click', ()=> window.location.href = WHITE_URL);
-  </script>
 </body>
 </html>
