--- a/index-graffiello.html
+++ b/index-graffiello.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Graffiello_V — Real Estate</title>
+  <title>Graffiello_v</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
@@ -11,7 +11,7 @@
 
   <!-- Hero Section -->
   <section class="relative h-screen flex items-center justify-center">
-    <img src="./images/building.jpg" alt="Luxury Estate" class="absolute inset-0 w-full h-full object-cover opacity-90">
+    <img src="./images/graffiellogo.png" alt="Luxury Estate" class="absolute inset-0 w-full h-full object-cover opacity-90">
     <div class="absolute inset-0 bg-gradient-to-b from-white/0 to-white/80"></div>
 
     <div class="relative text-center max-w-2xl px-6">
