--- a/index-graffiello.html
+++ b/index-graffiello.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Graffiello_V — Gallery</title>
+  <title>Graffiello_v</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <meta name="color-scheme" content="light">
   <style>
@@ -48,7 +48,7 @@
     <section id="home" class="relative h-screen md:h-[92vh] flex items-center">
       <!-- hero background -- use your preferred image or gradient -->
       <div class="absolute inset-0">
-        <img src="./images/hero-graffiello.jpg" alt="Hero" class="w-full h-full object-cover object-center"/>
+        <img src="./images/me.jpeg" alt="Hero" class="w-full h-full object-cover object-center"/>
         <div class="absolute inset-0 bg-gradient-to-b from-white/30 to-white/90"></div>
       </div>
 
@@ -69,7 +69,7 @@
         <div class="w-full md:w-1/2 hidden md:block">
           <!-- small showcase -->
           <div class="rounded-2xl overflow-hidden shadow-lg">
-            <img src="./images/hero-small.jpg" alt="Showcase" class="w-full h-80 object-cover">
+            <img src="./images/1.jpg" alt="Showcase" class="w-full h-80 object-cover">
           </div>
         </div>
       </div>
@@ -88,7 +88,7 @@
         <article class="rounded-2xl overflow-hidden bg-white border border-slate-100 card-hover transition-transform duration-200">
           <button class="group w-full text-left" data-title="Solitude in Blue" data-author="— Graffiello" data-poem="In the hush of dawn, cobalt seas breathe—solitude learns the tongue of light." data-img="./images/p1.jpg" aria-haspopup="dialog">
             <div class="w-full h-56 overflow-hidden">
-              <img src="./images/p1.jpg" alt="Solitude in Blue" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-400">
+              <img src="./images/2.jpg" alt="Solitude in Blue" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-400">
             </div>
             <div class="p-4">
               <h3 class="font-semibold">Solitude in Blue</h3>
@@ -100,7 +100,7 @@
         <article class="rounded-2xl overflow-hidden bg-white border border-slate-100 card-hover">
           <button class="group w-full text-left" data-title="Edge of Quiet" data-author="— G." data-poem="Cliffs hold the last letters of summer; wind erases and writes again." data-img="./images/p2.jpg" aria-haspopup="dialog">
             <div class="w-full h-56 overflow-hidden">
-              <img src="./images/p2.jpg" alt="Edge of Quiet" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-400">
+              <img src="./images/3.jpg" alt="Edge of Quiet" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-400">
             </div>
             <div class="p-4">
               <h3 class="font-semibold">Edge of Quiet</h3>
@@ -112,7 +112,7 @@
         <article class="rounded-2xl overflow-hidden bg-white border border-slate-100 card-hover">
           <button class="group w-full text-left" data-title="Glass & Ash" data-author="— G." data-poem="Mirrored windows keep the ash of old fires; we pass, polished and unburnt." data-img="./images/p3.jpg" aria-haspopup="dialog">
             <div class="w-full h-56 overflow-hidden">
-              <img src="./images/p3.jpg" alt="Glass & Ash" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-400">
+              <img src="./images/43.jpg" alt="Glass & Ash" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-400">
             </div>
             <div class="p-4">
               <h3 class="font-semibold">Glass & Ash</h3>
@@ -125,7 +125,7 @@
         <article class="rounded-2xl overflow-hidden bg-white border border-slate-100 card-hover">
           <button class="group w-full text-left" data-title="Nocturne" data-author="— Graffiello" data-poem="A night of stitched lights — the city breathes in time with my pulse." data-img="./images/p4.jpg">
             <div class="w-full h-56 overflow-hidden">
-              <img src="./images/p4.jpg" alt="Nocturne" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-400">
+              <img src="./images/5.jpg" alt="Nocturne" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-400">
             </div>
             <div class="p-4">
               <h3 class="font-semibold">Nocturne</h3>
@@ -137,7 +137,7 @@
         <article class="rounded-2xl overflow-hidden bg-white border border-slate-100 card-hover">
           <button class="group w-full text-left" data-title="Paper Boats" data-author="— G." data-poem="We set paper boats on puddles — small vessels for large childhood storms." data-img="./images/p5.jpg">
             <div class="w-full h-56 overflow-hidden">
-              <img src="./images/p5.jpg" alt="Paper Boats" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-400">
+              <img src="./images/6.jpg" alt="Paper Boats" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-400">
             </div>
             <div class="p-4">
               <h3 class="font-semibold">Paper Boats</h3>
@@ -149,7 +149,7 @@
         <article class="rounded-2xl overflow-hidden bg-white border border-slate-100 card-hover">
           <button class="group w-full text-left" data-title="The Quiet Archive" data-author="— G." data-poem="Each frame is a drawer; each silence a filing of memory." data-img="./images/p6.jpg">
             <div class="w-full h-56 overflow-hidden">
-              <img src="./images/p6.jpg" alt="The Quiet Archive" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-400">
+              <img src="./images/7.jpg" alt="The Quiet Archive" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-400">
             </div>
             <div class="p-4">
               <h3 class="font-semibold">The Quiet Archive</h3>
