--- a/index-graffiello.html
+++ b/index-graffiello.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Graffiello_v</title>
+  <title>Welcome to my room</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <meta name="color-scheme" content="light">
   <style>
@@ -245,7 +245,7 @@
     <!-- ===== ABOUT (kept minimal) ===== -->
     <section id="about" class="max-w-7xl mx-auto px-6 md:px-8 py-16">
       <div class="grid md:grid-cols-2 gap-8 items-center">
-        <img src="./images/about-side.jpg" alt="About Galih" class="rounded-2xl object-cover w-full h-80">
+        <img src="./images/me.jpeg" alt="About Galih" class="rounded-2xl object-cover w-full h-80">
         <div>
           <h2 class="text-2xl font-bold">About Graffiello</h2>
           <p class="mt-4 text-slate-600">Graffiello is a curated space for my visual work — where each image is a scene and each scene holds a short text or poem. Think of this site as a small, calm gallery that you can wander through.</p>
