--- a/index-graffiello.html
+++ b/index-graffiello.html
@@ -123,7 +123,7 @@
 
         <!-- add more cards as needed -->
         <article class="rounded-2xl overflow-hidden bg-white border border-slate-100 card-hover">
-          <button class="group w-full text-left" data-title="Nocturne" data-author="— Graffiello" data-poem="A night of stitched lights — the city breathes in time with my pulse." data-img="./images/p4.jpg">
+          <button class="group w-full text-left" data-title="Nocturne" data-author="— Graffiello" data-poem="A night of stitched lights — the city breathes in time with my pulse." data-img="./images/5.jpg">
             <div class="w-full h-56 overflow-hidden">
               <img src="./images/5.jpg" alt="Nocturne" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-400">
             </div>
@@ -135,7 +135,7 @@
         </article>
 
         <article class="rounded-2xl overflow-hidden bg-white border border-slate-100 card-hover">
-          <button class="group w-full text-left" data-title="Paper Boats" data-author="— G." data-poem="We set paper boats on puddles — small vessels for large childhood storms." data-img="./images/p5.jpg">
+          <button class="group w-full text-left" data-title="Paper Boats" data-author="— G." data-poem="foto ini mengenangnya bahwa kesempurnaan bukanlah anu." data-img="./images/6.jpg">
             <div class="w-full h-56 overflow-hidden">
               <img src="./images/6.jpg" alt="Paper Boats" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-400">
             </div>
