--- a/index-graffiello.html
+++ b/index-graffiello.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Welcome to my room</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <meta name="color-scheme" content="light">
-  <style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Graffiello_v</title>
+
+  <!-- Favicon -->
+  <link rel="icon" href="./images/galsp.png" type="image/png" sizes="32x32">
+  
     /* small custom styles */
     .card-hover:hover { transform: translateY(-6px); box-shadow: 0 18px 30px rgba(15,23,42,0.08); }
     .grid-fade { transition: opacity .25s ease, transform .25s ease; }
