--- a/index-graffiello.html
+++ b/index-graffiello.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Graffiello_v</title>
-
-  <!-- Favicon -->
-  <link rel="icon" href="./images/galsp.png" type="image/png" sizes="32x32">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <meta name="color-scheme" content="light">
+  <style>
+    /* small custom styles */
+    .card-hover:hover { transform: translateY(-6px); box-shadow: 0 18px 30px rgba(15,23,42,0.08); }
+    .grid-fade { transition: opacity .25s ease, transform .25s ease; }
+    /* modal backdrop blur fallback */
+    .modal-backdrop { background: rgba(0,0,0,0.55); backdrop-filter: blur(6px); -webkit-backdrop-filter: blur(6px); }
   </style>
 </head>
 <body class="antialiased text-slate-900 font-sans bg-gradient-to-b from-white to-slate-50">
