--- a/index-graffiello.html
+++ b/index-graffiello.html
@@ -78,7 +78,7 @@
         <!-- repeatable gallery card -->
         <!-- card data-poem attribute holds short poem / text to show in modal -->
         <article class="rounded-2xl overflow-hidden bg-white border border-slate-100 card-hover transition-transform duration-200">
-          <button class="group w-full text-left" data-title="Solitude in Blue" data-author="— Graffiello" data-poem="In the hush of dawn, cobalt seas breathe—solitude learns the tongue of light." data-img="./images/p1.jpg" aria-haspopup="dialog">
+          <button class="group w-full text-left" data-title="Solitude in Blue" data-author="— Graffiello" data-poem="In the hush of dawn, cobalt seas breathe—solitude learns the tongue of light." data-img="./images/2.jpg" aria-haspopup="dialog">
             <div class="w-full h-56 overflow-hidden">
               <img src="./images/2.jpg" alt="Solitude in Blue" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-400">
             </div>
@@ -90,7 +90,7 @@
         </article>
 
         <article class="rounded-2xl overflow-hidden bg-white border border-slate-100 card-hover">
-          <button class="group w-full text-left" data-title="Edge of Quiet" data-author="— G." data-poem="Cliffs hold the last letters of summer; wind erases and writes again." data-img="./images/p2.jpg" aria-haspopup="dialog">
+          <button class="group w-full text-left" data-title="Edge of Quiet" data-author="— G." data-poem="Cliffs hold the last letters of summer; wind erases and writes again." data-img="./images/3.jpg" aria-haspopup="dialog">
             <div class="w-full h-56 overflow-hidden">
               <img src="./images/3.jpg" alt="Edge of Quiet" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-400">
             </div>
@@ -102,9 +102,9 @@
         </article>
 
         <article class="rounded-2xl overflow-hidden bg-white border border-slate-100 card-hover">
-          <button class="group w-full text-left" data-title="Glass & Ash" data-author="— G." data-poem="Mirrored windows keep the ash of old fires; we pass, polished and unburnt." data-img="./images/p3.jpg" aria-haspopup="dialog">
+          <button class="group w-full text-left" data-title="Glass & Ash" data-author="— G." data-poem="Mirrored windows keep the ash of old fires; we pass, polished and unburnt." data-img="./images/4.jpg" aria-haspopup="dialog">
             <div class="w-full h-56 overflow-hidden">
-              <img src="./images/43.jpg" alt="Glass & Ash" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-400">
+              <img src="./images/4.jpg" alt="Glass & Ash" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-400">
             </div>
             <div class="p-4">
               <h3 class="font-semibold">Glass & Ash</h3>
@@ -139,7 +139,7 @@
         </article>
 
         <article class="rounded-2xl overflow-hidden bg-white border border-slate-100 card-hover">
-          <button class="group w-full text-left" data-title="The Quiet Archive" data-author="— G." data-poem="Each frame is a drawer; each silence a filing of memory." data-img="./images/p6.jpg">
+          <button class="group w-full text-left" data-title="The Quiet Archive" data-author="— G." data-poem="Each frame is a drawer; each silence a filing of memory." data-img="./images/7.jpg">
             <div class="w-full h-56 overflow-hidden">
               <img src="./images/7.jpg" alt="The Quiet Archive" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-400">
             </div>
