--- a/index-graffiello.html
+++ b/index-graffiello.html
@@ -237,7 +237,7 @@
     <!-- ===== ABOUT (kept minimal) ===== -->
     <section id="about" class="max-w-7xl mx-auto px-6 md:px-8 py-16">
       <div class="grid md:grid-cols-2 gap-8 items-center">
-        <img src="./images/profil6.jpg" alt="About Galih" class="rounded-2xl object-cover w-full h-80">
+        <img src="./images/profil6.png" alt="About Galih" class="rounded-2xl object-cover w-full h-80">
         <div>
           <h2 class="text-2xl font-bold">About Graffiello</h2>
           <p class="mt-4 text-slate-600">Graffiello is a curated space for my visual work — where each image is a scene and each scene holds a short text or poem. Think of this site as a small, calm gallery that you can wander through.</p>
