--- a/index-graffiello.html
+++ b/index-graffiello.html
@@ -52,13 +52,20 @@
         <div class="absolute inset-0 bg-gradient-to-b from-white/30 to-white/90"></div>
       </div>
 
-      <div class="relative max-w-6xl mx-auto px-6 md:px-8 flex flex-col md:flex-row items-center gap-12">
-        <div class="w-full md:w-1/2 text-left">
-          <h1 class="text-4xl md:text-6xl font-extrabold leading-tight text-slate-1000">Graffiello_V</h1>
-          <p class="mt-4 text-lg text-slate-900 max-w-xl">
-            A digital exhibition of works — images, photographs, and designs that speak in silence.  
-            Click any piece to read the poem that inspired it.
-          </p>
+     <div class="relative max-w-6xl mx-auto px-6 md:px-8 flex flex-col md:flex-row items-center gap-12">
+  <div class="w-full md:w-1/2 text-left">
+    <!-- Judul biru tua -->
+    <h1 class="text-4xl md:text-6xl font-extrabold leading-tight text-blue-900">
+      Graffiello_V
+    </h1>
+
+    <!-- Paragraf hitam -->
+    <p class="mt-4 text-lg text-black max-w-xl">
+      A digital exhibition of works — images, photographs, and designs that speak in silence.  
+      Click any piece to read the poem that inspired it.
+    </p>
+  </div>
+</div>
 
           <div class="mt-6 flex items-center gap-4">
             <a href="#gallery" class="inline-block bg-slate-900 text-white px-6 py-3 rounded-full shadow-sm hover:shadow-md">Explore Gallery</a>
