--- a/index-graffiello.html
+++ b/index-graffiello.html
@@ -56,7 +56,7 @@
   <div class="w-full md:w-1/2 text-left">
     <!-- Judul biru tua -->
     <h1 class="text-4xl md:text-6xl font-extrabold leading-tight text-blue-900">
-      Graffiello_V
+      Graffiello_v
     </h1>
 
     <!-- Paragraf hitam -->
