--- a/index-graffiello.html
+++ b/index-graffiello.html
@@ -22,7 +22,7 @@
       <a href="#home" class="flex items-center gap-3">
         <!-- small mark -->
         <div class="w-8 h-8 rounded-lg bg-slate-900 text-white flex items-center justify-center font-bold">갈</div>
-        <span class="font-semibold tracking-wide">Graffiello_V</span>
+        <span class="font-semibold tracking-wide">Graffiello_v</span>
       </a>
 
       <nav class="hidden md:flex items-center gap-8 text-sm">
