--- a/index-graffiello.html
+++ b/index-graffiello.html
@@ -60,7 +60,7 @@
     </h1>
 
     <!-- Paragraf hitam -->
-    <p class="mt-4 text-lg text-black max-w-xl">
+    <p class="mt-10 text-lg text-gray max-w-xl">
       A digital exhibition of works — images, photographs, and designs that speak in silence.  
       Click any piece to read the poem that inspired it.
     </p>
