--- a/index-graffiello.html
+++ b/index-graffiello.html
@@ -242,8 +242,8 @@
       <div class="grid md:grid-cols-2 gap-8 items-center">
         <img src="./images/profil6.png" alt="About Galih" class="rounded-2xl object-cover w-full h-80">
         <div>
-          <h2 class="text-2xl font-bold">About Graffiello</h2>
-          <p class="mt-4 text-slate-600">Graffiello is a curated space for my visual work — where each image is a scene and each scene holds a short text or poem. Think of this site as a small, calm gallery that you can wander through.</p>
+          <h2 class="text-2xl font-bold">Who is G.?</h2>
+          <p class="mt-4 text-slate-600">G. is a curated space for my visual work — where each image is a scene and each scene holds a short text or poem. Think of this site as a small, calm gallery that you can wander through.</p>
           <p class="mt-4 text-slate-600">I focus on photography, mixed media, and identity design — exhibited as series and single pieces.</p>
           <div class="mt-6">
             <a href="#contact" class="inline-block bg-slate-900 text-white px-5 py-2 rounded-full">Contact for commissions</a>
